--- a/portfolio.html
+++ b/portfolio.html
@@ -9,14 +9,13 @@
   <body>
     <h1>Washington Lima Ferreira</h1>
     <img class="imagem-ton" src="Imagens/fototon.jpg" alt="foto do ton" />
-    <p>
+    <p class="texto-centralizado">
       Brasileiro, residente da cidade de "Embu das artes" localizada no estado
-      de São Paulo. Profissional atuante há mais de <strong>10 anos</strong> na
-      área de <strong>áudio, vídeo e automação residencial</strong>. Tenho o
-      prazer de dizer que estou saindo da minha zona de conforto que atualmente
-      estou, para um novo desafio<strong
-        >"Me tornar um desenvolvedor Full Stack".</strong
-      >
+      de São Paulo.<br />
+      Profissional atuante há mais de <strong>10 anos</strong> na área de
+      <strong>áudio, vídeo e automação residencial</strong>.<br />
+      Tenho o prazer de dizer que estou saindo da minha zona de conforto, para
+      um novo desafio<strong>"Me tornar um desenvolvedor Full Stack".</strong>
     </p>
   </body>
 </html>
